Updated render logic and fixed route issues

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,7 @@
     <script src="{{ url_for('static', filename='js/notifications.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/service-worker.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/realtime.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/events.js') }}"></script>
     <script>
     document.addEventListener("DOMContentLoaded", function() {
         var lazyImages = [].slice.call(document.querySelectorAll("img.lazy"));
