--- a/app/templates/player_performance.html
+++ b/app/templates/player_performance.html
@@ -23,5 +23,5 @@
         {% endfor %}
     </tbody>
 </table>
-<a href="{{ url_for('player_data') }}">Zurück zur Datenerfassung</a>
+<a href="{{ url_for('main.player_data') }}">Zurück zur Datenerfassung</a>
 {% endblock %}
