--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Diskussionsforum</h1>
-<a href="{{ url_for('neues_thema') }}" class="btn">Neues Thema erstellen</a>
+<a href="{{ url_for('main.neues_thema') }}" class="btn">Neues Thema erstellen</a>
 <table id="forum-table">
     <thead>
         <tr>
@@ -16,7 +16,7 @@
     </tbody>
 </table>
 
-<script src="{{ url_for('static', filename='js/realtime.js') }}"></script>
+<script src="{{ url_for('main.static', filename='js/realtime.js') }}"></script>
 <script>
     function updateForumThemen(data) {
         const tableBody = document.querySelector('#forum-table tbody');
